Fix tiny gap above header
Fixess issue #8

--- a/photography-gallery/wwwroot/css/site.css
+++ b/photography-gallery/wwwroot/css/site.css
@@ -43,6 +43,7 @@ a {
 
 .header {
     top: 0;
+    margin: -1px 0 0;
 }
 
 .header a h1 {
